--- a/eureka-microservice/src/main/resources/bootstrap.yml
+++ b/eureka-microservice/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: eureka-microservice
   cloud:
     config:
-      uri: http://config-microservice-production-9ea3.up.railway.app:8080
+      uri: https://config-microservice-production-9ea3.up.railway.app
