cambio de rutas
cambio del gateway

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -1,7 +1,7 @@
 server.port=8082
 
 #Eureka
-eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone  = https://eureka-microservice-production-164a.up.railway.app/
 
 #Gateway
 spring.main.web-application-type=NONE 
