--- a/config-data/products.properties
+++ b/config-data/products.properties
@@ -1,10 +1,10 @@
 server.port=0
 
 #Configuración base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommercefastfood
+spring.datasource.url=jdbc:postgresql://containers-us-west-88.railway.app:5448/railway
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=ecommerce
-spring.datasource.password=comida
+spring.datasource.username=postgres
+spring.datasource.password=aTPGYwesJnabBrK9uxw3
 spring.jpa.database=POSTGRESQL
 
 #Para poder crear las tablas cuando inicia
@@ -24,7 +24,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.show-sql=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=https://eureka-microservice-production-164a.up.railway.app
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 # swagger-ui custom path
