config url actualziada quitando .git

--- a/config-microservice/src/main/resources/bootstrap.yml
+++ b/config-microservice/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
       server:
         git:
           default-label: main
-          uri: https://github.com/Edwin9226/ecommercefastfood.git
+          uri: https://github.com/Edwin9226/ecommercefastfood
           searchPaths: config-data
         bootstrap: true
 
