--- a/gateway-microservice/pom.xml
+++ b/gateway-microservice/pom.xml
@@ -53,6 +53,13 @@
 		</dependency>
 
 
+<!--		dependencia nube-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
