config products y pom dependencias

--- a/products/pom.xml
+++ b/products/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+
+<!--		dependencia h2 faltanate?-->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
 <!--cors dependencia ?-->
 <!--		<dependency>-->
 <!--			<groupId>org.apache.httpcomponents.client5</groupId>-->
