activando puerto y agregando porifile dev en eureka

--- a/eureka-microservice/src/main/resources/bootstrap.yml
+++ b/eureka-microservice/src/main/resources/bootstrap.yml
@@ -3,4 +3,7 @@ spring:
     name: eureka-microservice
   cloud:
     config:
+      profile: dev
+      application:
+        name: eureka-microservice
       uri: https://config-microservice-production-0212.up.railway.app
