--- a/products/src/main/resources/application.properties
+++ b/products/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+server.port=7070
 
+#Configuración base de datos
+spring.datasource.url=jdbc:postgresql://containers-us-west-90.railway.app:5815/railway
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=ZQ5DC6TAS5juG2sGkv80
+spring.jpa.database=POSTGRESQL
+
+#Para poder crear las tablas cuando inicia
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.hibernate.ddl-auto=update
+
+#Para mostrar mensajes de error en request y responses
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+
+logging.level.org.hibernate.sql=debug
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.show-sql=true
+
+eureka.client.service-url.defaultZone=https://eureka-microservice-production-03fd.up.railway.app/
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+# swagger-ui custom path
+springdoc.swagger-ui.use-root-path=true
+springdoc.swagger-ui.path=/swagger-ui.html
