--- a/auth/src/main/resources/bootstrap.yml
+++ b/auth/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
-spring:
-  application:
-    name: auth-service
-  cloud:
-    config:
-      enabled: true
-      uri: https://config-microservice-production-9ea3.up.railway.app
+#spring:
+#  application:
+#    name: auth-service
+#  cloud:
+#    config:
+#      enabled: true
+#      uri: https://config-microservice-production-9ea3.up.railway.app
