--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+server.port=0
 
+#Configuración base de datos
+spring.datasource.url=jdbc:postgresql://containers-us-west-90.railway.app:5815/railway
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=aTPGYwesJnabBrK9uxw3
+spring.jpa.database=POSTGRESQL
+
+#Para poder crear las tablas cuando inicia
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.hibernate.ddl-auto=update
+
+#Para mostrar mensajes de error en request y responses
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+
+logging.level.org.hibernate.sql=debug
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.show-sql=true
+
+eureka.client.service-url.defaultZone=https://eureka-microservice-production-164a.up.railway.app
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
