cambiando puerto de eureka deeploy
eureka.client.service-url.defaultZone=https://eureka-microservice-production-5ad3.up.railway.app

--- a/order-microservice/src/main/resources/application.properties
+++ b/order-microservice/src/main/resources/application.properties
@@ -1,2 +1,33 @@
+server.port=0
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#Configuración base de datos
+spring.datasource.url=jdbc:postgresql://containers-us-west-88.railway.app:5448/railway
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=aTPGYwesJnabBrK9uxw3
+spring.jpa.database=POSTGRESQL
+
+#Para poder crear las tablas cuando inicia
+spring.jpa.defer-datasource-initialization = true
+spring.jpa.hibernate.ddl-auto=update
+
+#Para mostrar mensajes de error en request y responses
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+
+logging.level.org.hibernate.sql=debug
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.show-sql=true
+
+#este estaba antes
+#eureka.client.service-url.defaultZone=https://eureka-microservice-production-164a.up.railway.app
+eureka.client.service-url.defaultZone=https://eureka-microservice-production-5ad3.up.railway.app
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+#este estaba puesto de antes
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
